# pqc-mat

./: .dockerignore  .gitignore  AUTHORS  CHANGELOG.md  README.md  dev.Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
docs/manual/: README.md  cbom-output.md  features.md  installation.md  start.md  system-concept.md  troubleshooting.md  vector-code.md  vector-network.md  vector-score.md
docs/specs/: README.md  publish.sh
docs/specs/SpecEngine/: README.md  c5browser.py  c5browser_config.yaml  c5fingerprint.py  c5graph.py  c5mermaid.py  c5publish.py  c5traceability.py  c5traceability_config.yaml  doorstop_yml_to_md.py  (+3 more)
docs/traceability/: ARC.html  MRS.html  SRS.html  SWD.html  TCS.html  TRP.html  index.html  items_browser.html  specs-graph.html  traceability.csv  traceability_stats.html
docs/website/: product-presentation.html  release-notes.html
tests/: test_algorithm_classifier.py  test_cbom_generator.py  test_cbom_scorer.py  test_risk_report.py
tests/content/: sample_code_cbom.json  sample_tls_cbom.json
tests/data/: sample-short-frmt-cbom.json  sample4risk-scorer-cbom.json
tor/: README.md  getting-started.md
tor/VECTOR-Code/: main.py
tor/VECTOR-Network/: network-scanning.py
tor/VECTOR-Score/: algorithm_classifier.py  cbom_scorer.py  main.py  report_generator.py
tor/gui/: README.md  app.py
tor/vector_code/: main.py
tor/vector_network/: main.py  testssl_to_cbom.py  zgrab2_to_cbom.py
tor/vector_score/: algorithm_classifier.py  cbom_scorer.py  main.py  report_generator.py
vec/: README.md  compilation-guide.md
vector/: cli.py
(+127 files in other folders)
